# teo-developer-manual

./: .gitignore  404.html  CMakeLists.txt  CONTRIBUTING.md  README-gitbook.md  README.md  SUMMARY.md  additional-resources.html  additional-resources.md  appendix-a-teo-diagrams.md  architecture.html  architecture.md  bill-of-materials.md  book.json  connectors.html  connectors.md  contributors.html  cui-absolute-values.md  demo-procedure.html  demo-procedure.md  development.md  diagrams.html  diagrams.md  driver-check-procedure.html  driver-check-procedure.md  dynamic-information.html  dynamic-information.md  frequently-asked-questions.md  gitbook-cover.md  index.html  introduction.html  introduction.md  mkdocs.yml  motores.md  network-information.html  network-information.md  overview-architecture.md  overview-demonstration.md  overview-firmware.md  overview-pc.md  (+7 more)
.github/workflows/: gh-pages.yml  gitbook.yml
appendix/: README.md  a-teo-diagrams.md  b-dynamic-information.md  b-teo-dynamic-information.md  b-teo-network-information.md  c-teo-network-information.md  d-demo-procedure.md  procedimiento-demos.md
assets/: README.md  dh-table.md  motores-motores.csv  motores-transmision.csv  teo-dynamic-information.md
assets/editable/: motores.ods
assets/lacquey-fetch/: README.md
assets/src/: DH parameters.ods  motores.ods
cmake/template/: TEO_DEVELOPER_MANUALConfig.cmake.in
csv/: bom.csv  dh-head.csv  dh-leftArm.csv  dh-leftLeg.csv  dh-rightArm.csv  dh-rightLeg.csv  dh-root-head.csv  dh-root-leftLeg.csv  dh-root-rightArm.csv  dh-transformations.csv  dh-trunk.csv  dynamic_info_absolute.csv  dynamic_info_relative.csv  lengths.csv  motores-motores.csv  motores-protecciones-brazos.csv  motores-protecciones-piernas.csv  motores-transmision.csv  teo-center-of-masses.csv
csv/deprecated/: dh-transformations.csv
csv/editable/: motores.ods
docs/: README.md  contributors.md  demo-procedure.md  diagrams.md  driver-check-procedure.md  dynamic-information.md  introduction.md  network-information.md  switches-and-power.md  tables.md
docs/csv/: dh-fetch.csv  dh-head-transformations.csv  dh-leftArm.csv  dh-root-leftArm.csv  dh-root-rightLeg.csv  dynamic_info_relative.csv
docs/csv/editable/: motores.ods
docs/overview/: development.md  index.md  pc.md
docs/tutorial/: ft.md  index.md  kinfu.md  mesh.md  motor.md  rgbd.md  trajectories.md
fig/: README.md
fig/editable/: 2020-10-01-teo-cognitive-architecture.graphml  README.md  teo.mermaid
js/: scripts.js
overview/: README.md  architecture.md  demonstration.html  demonstration.md  development.html  development.md  firmware.html  firmware.md  index.html  pc.html  pc.md  research.html  research.md  teo-network-information.md
scripts/admin/: update-gitbook.sh
search/: search_index.json
styles/: website.css
tutorial/: README.md  ft.html  ft.md  index.html  kinfu.html  kinfu.md  mesh.html  motor.html  motor.md  rgbd.html  rgbd.md  trajectories.html  trajectories.md
